# hardware-effects

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  requirements.txt  utils.py
4k-aliasing/: 4k-aliasing.cpp  CMakeLists.txt  README.md  benchmark.py
bandwidth-saturation/: CMakeLists.txt  README.md  bandwidth-saturation.cpp  benchmark.py
branch-misprediction/: CMakeLists.txt  README.md  benchmark.py  branch-misprediction.cpp  branch-target-misprediction.cpp
cache-aliasing/: CMakeLists.txt  README.md  benchmark.py  cache-aliasing.cpp
cache-conflicts/: CMakeLists.txt  README.md  benchmark.py  cache-conflicts.cpp
cache-hierarchy-bandwidth/: CMakeLists.txt  README.md  benchmark.py  cache-hierarchy-bandwidth.cpp
cache-memory-bound/: CMakeLists.txt  README.md  benchmark.py  cache-memory-bound.cpp
data-dependency/: CMakeLists.txt  README.md  benchmark.py  data-dependency.cpp
dram-refresh/: CMakeLists.txt  README.md  benchmark.py  dram-refresh.cpp
false-sharing/: CMakeLists.txt  README.md  benchmark.py  false-sharing.cpp
floating-point/: CMakeLists.txt  README.md  denormals.cpp  denormals.py  sse-avx-mix.cpp  sse-avx-mix.py
hardware-store-elimination/: CMakeLists.txt  README.md  benchmark.py  hardware-store-elimination.cpp
misaligned-access/: CMakeLists.txt  README.md  benchmark.py  misaligned-access.cpp
prefetching/: CMakeLists.txt  README.md  benchmark.py  prefetching.cpp  random-accesses.cpp  random-accesses.py  software-prefetching.cpp  software-prefetching.py
store-buffer-capacity/: CMakeLists.txt  (+2 more)
(+9 files in other folders)
