cmake_minimum_required(VERSION 2.8)
project(hardware-effects)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -pedantic")

add_subdirectory(4k-aliasing)
add_subdirectory(bandwidth-saturation)
add_subdirectory(branch-misprediction)
add_subdirectory(cache-conflicts)
add_subdirectory(cache-hierarchy-bandwidth)
add_subdirectory(cache-memory-bound)
add_subdirectory(data-dependency)
add_subdirectory(dram-refresh)
add_subdirectory(false-sharing)
add_subdirectory(floating-point)
add_subdirectory(hardware-store-elimination)
add_subdirectory(misaligned-access)
add_subdirectory(prefetching)
add_subdirectory(write-combining)
add_subdirectory(store-buffer-capacity)
